# PythonClaw

./: CONTRIBUTING.md  README.md  pyproject.toml  pythonclaw.example.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
pythonclaw/: __init__.py  config.py  daemon.py  init.py  main.py  onboard.py  server.py  session_manager.py
pythonclaw/channels/: discord_bot.py  telegram_bot.py  whatsapp_bot.py
pythonclaw/core/: __init__.py  agent.py  compaction.py  persistent_agent.py  session_store.py  skill_loader.py  skillhub.py  tools.py
pythonclaw/core/llm/: anthropic_client.py  base.py  gemini_client.py  openai_compatible.py
pythonclaw/core/memory/: manager.py  storage.py
pythonclaw/core/retrieval/: __init__.py  dense.py  retriever.py
pythonclaw/scheduler/: cron.py  heartbeat.py
pythonclaw/templates/skills/communication/: CATEGORY.md
pythonclaw/templates/skills/communication/email/: SKILL.md  send_email.py
pythonclaw/templates/skills/communication/slack/: SKILL.md  slack_api.py
pythonclaw/templates/skills/data/: CATEGORY.md
pythonclaw/templates/skills/data/csv_analyzer/: SKILL.md
pythonclaw/templates/skills/data/finance/: SKILL.md  fetch_quote.py
pythonclaw/templates/skills/data/news/: SKILL.md  search_news.py
pythonclaw/templates/skills/data/pdf_reader/: SKILL.md
pythonclaw/templates/skills/data/scraper/: SKILL.md  scrape.py
pythonclaw/templates/skills/data/weather/: SKILL.md  weather.py
pythonclaw/templates/skills/data/youtube/: SKILL.md  youtube_info.py
pythonclaw/templates/skills/dev/: CATEGORY.md
pythonclaw/templates/skills/dev/code_runner/: SKILL.md  run_code.py
pythonclaw/templates/skills/dev/github/: SKILL.md  gh.py
pythonclaw/templates/skills/dev/http_request/: SKILL.md  request.py
pythonclaw/templates/skills/google/: CATEGORY.md
pythonclaw/templates/skills/google/workspace/: SKILL.md  check_setup.sh
pythonclaw/templates/skills/media/: CATEGORY.md
pythonclaw/templates/skills/meta/: CATEGORY.md
pythonclaw/templates/skills/productivity/: CATEGORY.md
pythonclaw/templates/skills/system/: CATEGORY.md
pythonclaw/templates/skills/text/: CATEGORY.md
pythonclaw/templates/skills/web/: CATEGORY.md
pythonclaw/web/: app.py
pythonclaw/web/static/: index.html
tests/: test_compaction.py  test_persistence.py  test_rag_hybrid.py  test_skills.py  test_soul.py
(+29 files in other folders)
